[package]
authors = ["Victor Polevoy <fx@thefx.co>"]
categories = ["development-tools", "development-tools::cargo-plugins"]
description = "A third-party cargo extension for checking grammar in the documentation and comments."
edition = "2021"
homepage = "https://github.com/vityafx/cargo-grammarly"
keywords = ["grammar", "english", "api", "request", "language"]
license = "MIT/Apache-2.0"
name = "cargo-grammarly"
readme = "README.md"
repository = "https://github.com/vityafx/cargo-grammarly"
version = "0.1.3"

[badges]
travis-ci = {repository = "vityafx/cargo-grammarly"}

[[bin]]
name = "cargo-grammarly"

[dependencies]
clap = {version = "4", features = ["cargo", "string"]}
dotenvy = "0.15.5"
grammarly = "0.3"
proc-macro2 = {version = "1.0", features = ["span-locations"]}
syn = "1.0"
term = "0.7"
walkdir = "2"
